general changes for 13-oct (squashed rebase) -added reptile item back onto menu -added in reptile icon -change hover on nav -hover bg for search button on home screen -bg on search btn does not work -remove gradient bg on nav -put nav margin back in -now loading bold version of BenchNine font -moved header by text left a bit -updated pet category links and facebook/instagram targets -link for products category -moved home page search out into own addon -added core_version_minumum to new addon to try get it to work -deeerrrr -debug for search -more work on search stuff and changed background of nav again -fix up errors -blaa -change bg

--- a/geo_templates/petsplease/external/sass/home.scss
+++ b/geo_templates/petsplease/external/sass/home.scss
@@ -82,10 +82,14 @@
 		font-size: 1.6em;
 		font-family: $font_special;
 		padding: 6px 12px;
-		background-color: $hotpink;
+		background-color: $navyblue;
 		border: none;
 		cursor: pointer;
 		color: white;
 		width: 100%;
+
+		&:hover {
+			// background-color: $bluegreen;
+		}
 	}
 }
